ecs/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  Environment:
    Type: String
    Description: Deployment environment (test,production)
    AllowedValues:
      - test
      - production
    Default: test
Resources:
  FargateTaskDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      Family: !Sub "snappin-${Environment}"
      RuntimePlatform:
        CpuArchitecture: X86_64
        OperatingSystemFamily: LINUX
      Cpu: "1024"
      Memory: "2048"
      NetworkMode: "awsvpc"
      RequiresCompatibilities:
        - "FARGATE"
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      TaskRoleArn: !GetAtt TaskRole.Arn
      ContainerDefinitions:
        - Name: !Sub "snappin-${Environment}-container"
          Image: !Join
            - ""
            - - !ImportValue snappin-ecr-repository-uri
              - ":latest"
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/ecs/snappin-${Environment}"
              awslogs-region: us-east-1
              awslogs-stream-prefix: ecs
          PortMappings:
            - ContainerPort: 3000
              HostPort: 3000
              Protocol: "tcp"
              AppProtocol: http
          Environment:
            - Name: APP_BIND_ADDRESS
              Value: 0.0.0.0
            - Name: APP_VERSION
              Value: !Sub ${Environment}
            - Name: DOMAIN
              Value: !Join
                - ""
                - - Fn::ImportValue: !Sub "snappin-${Environment}-api-gateway-endpoint"
            - Name: SUBDOMAIN
              Value: www
            - Name: ENVIRONMENT
              Value: !Sub ${Environment}
            - Name: LOG_LEVEL
              Value: info
            - Name: PORT
              Value: 3000
            - Name: PROTOCOL
              Value: http
            - Name: PUBLIC_KEY_URI
              Value: !Join
                - ""
                - - Fn::ImportValue: !Sub "snappin-${Environment}-well-know-jwts"
            - Name: MAPS_TABLE_NAME
              Value: !Sub "snappin-${Environment}-maps"
            - Name: IMAGES_TABLE_NAME
              Value: !Sub "snappin-${Environment}-images"
            - Name: MARKERS_TABLE_NAME
              Value: !Sub "snappin-${Environment}-markers"
            - Name: REGION
              Value: us-east-1
            - Name: QUEUE_URL
              Value: !Join
                - ""
                - - Fn::ImportValue: !Sub "snappin-${Environment}-optimized-images-queue-url"
            - Name: TOPIC_URL
              Value: http://sns.us-east-1.localstack:4566/000000000000/snappin-topic
            - Name: QUEUE_MAX_NUM_MESSAGES
              Value: 10
            - Name: QUEUE_WAIT_TIME_SECONDS
              Value: 10
            - Name: QUEUE_POLLING_INTERVAL
              Value: 3600
            - Name: S3_DUMP_BUCKET_NAME
              Value: !Sub "snappin-${Environment}-dump"
            - Name: S3_OPTMIZED_BUCKET_NAME
              Value: !Sub "snappin-${Environment}-optimized"
            - Name: S3_PRESIGNED_URL_EXPIRATION_IN_SECONDS
              Value: 300
  ECSCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterName: !Sub "snappin-${Environment}"
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT

  ECSService:
    Type: "AWS::ECS::Service"
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: 1
      LaunchType: "FARGATE"
      ServiceName: !Sub "snappin-${Environment}-service"
      TaskDefinition: !Ref FargateTaskDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets:
            - Fn::ImportValue: !Sub snappin-${Environment}-public-subnet-one-id
            - Fn::ImportValue: !Sub snappin-${Environment}-public-subnet-two-id

  ECSSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "Security group for snappin-${Environment} ECS service"
      VpcId: !Join
        - ""
        - - Fn::ImportValue: !Sub "snappin-${Environment}-vpc"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  TaskExecutionRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ecs-tasks.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  TaskRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ecs-tasks.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: !Sub "snappin-${Environment}-ecsTaskRolePolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "s3:GetObject"
                  - "s3:PutObject"
                Resource: "*"
              - Effect: "Allow"
                Action:
                  - "sqs:ReceiveMessage"
                Resource: !Join
                  - ""
                  - - Fn::ImportValue: !Sub "snappin-${Environment}-optimized-images-queue-arn"
              - Effect: "Allow"
                Action:
                  - "dynamodb:PutItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:BatchWriteItem"
                  - "dynamodb:Query"
                Resource:
                  - !Join
                    - ""
                    - - Fn::ImportValue: !Sub "snappin-${Environment}-images-table-arn"
                  - !Join
                    - ""
                    - - Fn::ImportValue: !Sub "snappin-${Environment}-maps-table-arn"
                  - !Join
                    - ""
                    - - Fn::ImportValue: !Sub "snappin-${Environment}-markers-table-arn"

Outputs:
  ECSSecurityGroup:
    Description: The ARN of the security group attached to the snappin ECS service
    Value: !Ref ECSSecurityGroup
    Export:
      Name: !Sub "snappin-${Environment}-ecs-security-group"
  TaskExecutionRole:
    Description: The ARN of the task execution role attached to the snappin-api ECS task definition
    Value: !Ref TaskExecutionRole
    Export:
      Name: !Sub "snappin-${Environment}-task-execution-role"
  TaskRole:
    Description: The ARN of the task role attached to the snappin-api ECS task definition
    Value: !Ref TaskRole
    Export:
      Name: !Sub "snappin-${Environment}-task-role"
